# release-example

./: 404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci-cd.yaml
docs/: getting-started.md  index.md  setup.md
getting-started/: index.html
schema-metadata/: index.html
search/: search_index.json
setup/: index.html
