[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "release-example
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Release python project on testpypi"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
[project.urls]
Homepage = "https://github.com/sadnanalmanir/release-example"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/sadnanalmanir/release-example.git"
Issues = "https://github.com/sadnanalmanir/release-example/issues"
Changelog = "https://github.com/sadnanalmanir/release-example/blob/main/CHANGELOG.md"